# lingolearn-backend

./: .env.example  .gitignore  Makefile  README.md  __init__.py  agent.py  app.py  database.py  main.py  models.py  pyproject.toml
src/: __init__.py  api.py  main.py
src/agent/: agent.py
src/core/: config.py
src/db/: database.py
tests/: test_api.py  test_vision.py
